--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                     <div class="subheading mb-3">Habilidades técnicas</div>
                     <p><strong>Lenguajes de Programación:</strong> Java, JavaScript, TypeScript, PHP, SQL, HTML, CSS.</p>
-                    <p><strong>Frameworks y Herramientas:</strong> React, Astro, Bootstrap, Git.</p>
+                    <p><strong>Frameworks y Herramientas:</strong> React, Astro, Bootstrap, Tailwind, Git.</p>
                     <p><strong>Bases de Datos:</strong> MySQL.</p>
                     <p><strong>Otros:</strong> Programación orientada a objetos, diseño responsivo, desarrollo de aplicaciones móviles.</p>
             </section>
