--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text-warning">Segura</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Rua Venezuela 70 · Vigo, PO 36204 · +34 697-844-418 ·
+                        Vigo, Pontevedra · +34 697-844-418 ·
                         <a href="mailto:name@email.com">dianyasm@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Estudiante de Formación Profesional en Desarrollo de Aplicaciones Multiplataforma, 
@@ -139,7 +139,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Educación</h2>
+                    <h2 class="mb-5">Formación Academica</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">CEBEM</h3>
